chore: fix overflow of emoji pick

--- a/src/index.css
+++ b/src/index.css
@@ -183,7 +183,7 @@ select {
   transform: translateY(-50%);
   margin: 0 24px 0 0;
   float: left;
-  z-index: 7;
+  z-index: 10;
 }
 
 .postForm__images-area__form__label_loading {
@@ -221,6 +221,10 @@ select {
   .post {
     padding: 12px 18px;
   }
+
+  .emoji-mart {
+    right: 0;
+  }
 }
 
 .post-icon {
@@ -237,7 +241,7 @@ select {
 }
 
 .post-main {
-  display: flow-root;
+  display: inherit;
 }
 
 .post-head {
@@ -473,9 +477,13 @@ img.emoji {
   margin: 0.2em;
 }
 
+.emoji-mart-container {
+  object-fit: cover;
+}
+
 .emoji-mart {
   position: absolute;
-  z-index: 10;
+  z-index: 20;
   margin-left: 12px;
 }
 
